[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-rest-client-python"
version = "0.1.3"
description = "Python client for Agora REST APIs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Agora", email = "support@agora.io"}
]
keywords = ["agora", "rest", "api", "conversational-ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/AgoraIO-Community/agora-rest-client-python"
Documentation = "https://github.com/AgoraIO-Community/agora-rest-client-python"
Repository = "https://github.com/AgoraIO-Community/agora-rest-client-python"
"Bug Tracker" = "https://github.com/AgoraIO-Community/agora-rest-client-python/issues"

[tool.setuptools.packages.find]
exclude = ["examples*", "tests*", "scripts*"]
